--- a/src/main/resources/templates/users/users-view.html
+++ b/src/main/resources/templates/users/users-view.html
@@ -8,12 +8,16 @@
 <body id="page-top ">
 	<header th:replace="layouts/internt-layout.html :: 'header' "></header>
 
-	<div class="alert alert-success" th:if="${success!=null}" th:text="${success}"></div>
-	<div class="alert alert-danger" th:if="${danger!=null}" th:text="${error}"></div>
-	<div class="alert alert-warning" th:if="${warning!=null}" th:text="${warning}"></div>
+	<div class="alert alert-success" th:if="${success!=null}"
+		th:text="${success}"></div>
+	<div class="alert alert-danger" th:if="${danger!=null}"
+		th:text="${error}"></div>
+	<div class="alert alert-warning" th:if="${warning!=null}"
+		th:text="${warning}"></div>
 	<div class="alert alert-info" th:if="${info!=null}" th:text="${info}"></div>
 
-	<div class="container mt-3">
+	<div class="container mt-3 ml-2 mr-2"
+		style="min-width: 95%; max-width: 100%;">
 		<h1 class="mt-4" th:text="${titulo}"></h1>
 		<div class="form-group">
 			<div class="container">
@@ -24,7 +28,7 @@
 			</div>
 		</div>
 		<br>
-		<table class="table">
+		<table class="table table-bordered">
 			<thead class="thead-dark">
 				<tr>
 					<th scope="col">USERNAME</th>
@@ -33,7 +37,9 @@
 					<th scope="col">TELEFONO</th>
 					<th scope="col">CORREO</th>
 					<th scope="col">ESTADO</th>
-					<th scope="col">ACCIONES</th>
+					<th scope="col">CONTRASEÑA TEMPORAL</th>
+					<th scope="col">EDITAR</th>
+					<th scope="col">ELIMINAR</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -44,11 +50,22 @@
 					<td th:text="${usu.phone}"></td>
 					<td th:text="${usu.email}"></td>
 					<td th:text="${usu.currentState.state.description}"></td>
+					<td style="text-align: center;">
+						<button type="button" class="btn btn-secondary"
+							th:onclick="openDialog('D001',[[${usu}]])">
+							<i class="fas fa-lock"></i>
+						</button>
+					</td>
 					<td>
-						<button type="button" class="btn btn-primary">
+						<button type="button" class="btn btn-primary"
+							th:onclick="openDialog('D002',[[${usu}]])">
 							<i class="far fa-edit"></i>
 						</button>
-						<button type="button" class="btn btn-danger">
+					</td>
+					<td>
+
+						<button type="button" class="btn btn-danger"
+							th:onclick="openDialog('D003',[[${usu}]])">
 							<i class="fas fa-trash"></i>
 						</button>
 					</td>
@@ -56,14 +73,10 @@
 			</tbody>
 		</table>
 	</div>
-	
-	<!-- <div th:object="${usuario}" th:remove="tag">
-		<ul th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
-			<li th:each="err: ${#fields.errors('*')}" th:text="${err}"></li>
-		</ul>
-	</div>-->
 
-	<form method="post" th:object="${usuario}" th:action="@{/newUser}" id="formUsuario">
+
+	<form method="post" th:object="${usuario}" th:action="@{/newUser}"
+		id="formUsuario">
 		<div class="modal fade" id="modal_registro_usuario" role="dialog">
 			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
@@ -99,9 +112,9 @@
 									<div class="col-sm-7">
 										<input type="text" th:field="*{numDocument}"
 											class="form-control" id="numDocument"
-											placeholder="1700000001" />
-										<label for="" id="cedulaOK" style="color:black;"></label>
-										<input type="text" id="validar_cedula" hidden> 
+											placeholder="1700000001" /> <label for="" id="cedulaOK"
+											style="color: black;"></label> <input type="text"
+											id="validar_cedula" hidden>
 									</div>
 								</div>
 								<div class="form-group row">
@@ -109,8 +122,10 @@
 										de Usuario</label>
 									<div class="col-sm-7">
 										<select class="form-select" th:field="*{type}">
-										  <option selected   disabled  value="0">Seleccione un tipo</option>
-										  <option  th:each="typeUser: ${types}" th:value="${typeUser.code}" th:text="${typeUser.name}"></option>
+											<option selected disabled value="0">Seleccione un
+												tipo</option>
+											<option th:each="typeUser: ${types}"
+												th:value="${typeUser.code}" th:text="${typeUser.name}"></option>
 										</select>
 									</div>
 								</div>
@@ -122,7 +137,8 @@
 										alt="Card image cap" id="img_user">
 									<div class="card-body" style="width: auto;">
 										<input type="file" value="Seleccionar archivo"
-											style="color: transparent; background-color: transparent;" id="img_input" src=""/>
+											style="color: transparent; background-color: transparent;"
+											id="img_input" src="" />
 									</div>
 								</div>
 							</div>
@@ -169,8 +185,8 @@
 								<div class="form-group row">
 									<label for="" class="ml-1 col-sm-3 col-form-label">Discapacidad</label>
 									<div class="col-sm-8">
-										<input type="text" th:field="*{disability}" class="form-control"
-											id="disability" />
+										<input type="text" th:field="*{disability}"
+											class="form-control" id="disability" />
 									</div>
 								</div>
 
@@ -191,8 +207,8 @@
 								<div class="form-group row">
 									&nbsp;&nbsp;&nbsp;<label for="" class="col-sm-4 col-form-label">Contraseña</label>
 									<div class="col-sm-7">
-										<input type="text" class="form-control" id="password"
-											disabled  placeholder="Generada aleatoriamente" /> <br>
+										<input type="text" class="form-control" id="password" disabled
+											placeholder="Generada aleatoriamente" /> <br>
 									</div>
 								</div>
 							</div>
@@ -205,16 +221,12 @@
 										los sistemas que el usuario va a poder acceder:</label>
 									<div class="col  align-self-center">
 										<ul>
-											<li th:each="systemAplication : ${systemsApp}">
-											
-											<input
+											<li th:each="systemAplication : ${systemsApp}"><input
 												type="checkbox" th:id="${systemAplication.keyword}"
-												th:value="${systemAplication.keyword}" th:field="*{permissons}" /> 
-												<label
+												th:value="${systemAplication.keyword}"
+												th:field="*{permissons}" /> <label
 												th:text="${systemAplication.name + ': ' + systemAplication.description}">
-											</label>
-											
-											</li>
+											</label></li>
 
 										</ul>
 									</div>
@@ -228,8 +240,10 @@
 									<br> <label for="" class="ml-1 col-sm-3 col-form-label">Ciudad:</label>
 									<div class="col-sm-8">
 										<select class="form-select" th:field="*{city}">
-										  <option selected disabled value="0">Seleccione una ciudad</option>
-										  <option  th:each="city: ${citys}" th:value="${city.name}" th:text="${city.name}"></option>
+											<option selected disabled value="0">Seleccione una
+												ciudad</option>
+											<option th:each="city: ${citys}" th:value="${city.name}"
+												th:text="${city.name}"></option>
 										</select>
 									</div>
 								</div>
@@ -237,24 +251,24 @@
 									<label for="" class="ml-1 col-sm-3 col-form-label">Calle
 										Principal:</label>
 									<div class="col-sm-8">
-										<input type="text" th:field="*{mainStreet}" class="form-control"
-											id="phone" placeholder="022000001" />
+										<input type="text" th:field="*{mainStreet}"
+											class="form-control" id="phone" placeholder="022000001" />
 									</div>
 								</div>
 								<div class="form-group row">
 									<label for="" class="ml-1 col-sm-3 col-form-label">Calle
 										Secundaria:</label>
 									<div class="col-sm-8">
-										<input type="text" th:field="*{secondaryStreet}" class="form-control"
-											id="phone" />
+										<input type="text" th:field="*{secondaryStreet}"
+											class="form-control" id="phone" />
 									</div>
 								</div>
 
 								<div class="form-group row">
 									<label for="" class="ml-1 col-sm-3 col-form-label">Barrio:</label>
 									<div class="col-sm-8">
-										<input type="text" th:field="*{neighborhood}" class="form-control"
-											id="phone" />
+										<input type="text" th:field="*{neighborhood}"
+											class="form-control" id="phone" />
 									</div>
 								</div>
 
@@ -262,8 +276,8 @@
 									<label for="" class="ml-1 col-sm-3 col-form-label">Numeración
 										Casa:</label>
 									<div class="col-sm-8">
-										<input type="text" th:field="*{houseNumbering}" class="form-control"
-											id="phone" />
+										<input type="text" th:field="*{houseNumbering}"
+											class="form-control" id="phone" />
 									</div>
 								</div>
 
@@ -282,12 +296,109 @@
 					</div>
 				</div>
 			</div>
+
+
 		</div>
 	</form>
 
-<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
-<script th:src="@{/js/popper.min.js}"></script>
-<script th:src="@{/js/bootstrap.min.js}"></script>
+
+
+	<div class="modal fade" id="modal_gen_cred_temp" role="dialog">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">
+						<b>Generar una Contraseña Temporal al usuario</b>
+					</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+
+					<form th:action="@{/user/temp-credential/generation}" method="post">
+						<div class="container" id="modal-container-temp-cred"></div>
+						<hr />
+						<div class="container">
+							<div class="row no-gutters mb-1">
+								<label for="observationsInput" class="col-sm-4 col-form-label">Observaciones:
+									(Opcional)</label>
+								<div class="col-sm-8">
+									<input type="text" class="form-control" id="observationsInput"
+										placeholder="motivos para generar la contraseña..."
+										name="observations" />
+								</div>
+							</div>
+							<div class="row no-gutters mb-1">
+								<label for="dateExpiration" class="col-sm-4 col-form-label">Fecha
+									de Expiración: (Opcional)</label>
+								<div class="col-sm-8">
+									<input type="date" id="dateExpiration" class="form-control"
+										name="expirationDatta">
+								</div>
+							</div>
+						</div>
+						<div class="modal-footer">
+
+							<i class="fa fa-check"></i>&nbsp; <input type="submit"
+								class="btn btn-primary" value="Generar" />
+
+							<button type="button" class="btn btn-danger" data-dismiss="modal">
+								<i class="fa fa-close"></i>&nbsp;Cerrar
+							</button>
+						</div>
+					</form>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal_edit_user" role="dialog">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">
+						<b>Editar la Información del usuario</b>
+					</h5>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<form th:action="@{/}" method="post">
+						<div class="container" id="modal-container-edit">
+							<div class="row no-gutters"></div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="modal fade" id="modal_delete_user" role="dialog">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">
+						<b>¿Está seguro que desea eliminar el usuario?</b>
+					</h5>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+
+					<div class="container">
+						<div class="row no-gutters">
+							<div class="col"></div>
+							<div class="col"></div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script th:src="@{/js/jquery-3.2.1.min.js}"></script>
+	<script th:src="@{/js/popper.min.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
 
 	<script src="/js/users.js"></script>
 
