--- a/src/main/resources/templates/config/systems.html
+++ b/src/main/resources/templates/config/systems.html
@@ -6,13 +6,13 @@
 	<header th:replace="layouts/internt-layout.html :: 'header' "></header>
 	<main class="container mt-3">
 		<h1 class="mt-4">.</h1>
-		<section class="row">
+		<section class="row pt-1 pb-1">
 			<div class="col-sm-3">
-				<button type="button" class="btn btn-secondary">Secondary</button>
+				<button type="button" class="btn btn-secondary">Agregar Sistema</button>
 			</div>
 		</section>
 
-		<section class="row">
+		<section class="row pt-1">
 			<div class="col">
 				<table class="table">
 					<thead class="table-dark">
@@ -39,6 +39,10 @@
 			</div>
 		</section>
 	</main>
+	
+	
+	
+	
 	<footer th:replace="layouts/internt-layout.html :: 'footer'">
 	</footer>
 </body>
